[gd_scene load_steps=8 format=3 uid="uid://bbpudrw5b5fc"]

[ext_resource type="PackedScene" uid="uid://yijnjcxej2i6" path="res://Assets/Models/doll.glb" id="1_3w034"]
[ext_resource type="Script" path="res://Scripts/pillar.gd" id="1_7m731"]
[ext_resource type="Texture2D" uid="uid://dpnoxs2iq8itt" path="res://addons/kenney_particle_pack/circle_02.png" id="3_ff5bb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fnju2"]
height = 0.483245
radius = 5.59334

[sub_resource type="BoxShape3D" id="BoxShape3D_ofql0"]
size = Vector3(1.62842, 1.19348, 0.2854)

[sub_resource type="CylinderMesh" id="CylinderMesh_gmfap"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ed134"]
transparency = 1
albedo_color = Color(1, 0.772549, 0.27451, 0.0235294)

[node name="Pillar" type="StaticBody3D"]
transform = Transform3D(0.173648, 2.82922e-16, 0.984808, 3.48787e-16, 1, -3.48787e-16, -0.984808, 4.04054e-16, 0.173648, 2.08165e-12, 0.948969, 2.08165e-12)
script = ExtResource("1_7m731")

[node name="Model" parent="." instance=ExtResource("1_3w034")]
transform = Transform3D(0.946983, -5.6131e-23, 5.78952e-09, 1.3297e-23, 0.758081, 3.00462e-22, 4.57927e-08, -2.4342e-22, 1.65464, -3.19694e-05, -0.828789, -0.00022387)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 6.85002e-23, -2.25595e-08, 1.18003e-23, 1, -3.94982e-24, 2.71644e-08, -8.05442e-24, 1, -0.00319757, 0, 0.00212837)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(2, -5.1578e-22, 3.86903e-07, 5.15779e-22, 2, 6.05321e-21, -3.86903e-07, -6.05321e-21, 2, 9.11814e-17, 0.125813, -9.12898e-17)
shape = SubResource("CylinderShape3D_fnju2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, -6.06464e-23, 2.4115e-09, 6.06464e-23, 1, 3.25077e-21, -2.4115e-09, -3.25077e-21, 1, -0.0187989, 0.128009, 0.0142823)
shape = SubResource("BoxShape3D_ofql0")

[node name="CircleNotifier" type="MeshInstance3D" parent="."]
transform = Transform3D(21.9848, 7.05688e-25, -9.92486e-07, -1.98807e-21, 0.00599584, -4.20685e-22, 8.44369e-07, -3.32358e-26, 21.9848, -9.21572e-18, -0.0264149, 9.54098e-18)
visible = false
mesh = SubResource("CylinderMesh_gmfap")
surface_material_override/0 = SubResource("StandardMaterial3D_ed134")

[node name="Sprite3D" type="Sprite3D" parent="CircleNotifier"]
transform = Transform3D(0.348234, 5.48782e-09, -2.62272e-16, 1.53186e-19, -5.58134e-05, -1276.86, -1.39593e-08, 0.348234, -1.52218e-08, 9.46862e-14, 4.40553, 9.46853e-14)
modulate = Color(0.568627, 0.419608, 0.266667, 0.203922)
texture = ExtResource("3_ff5bb")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
